[package]
name = "oha-538"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
futures = "0.3.30"
http-body-util = "0.1.2"
hyper = { version = "1.4", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.6", features = ["tokio"] }
rustls = "0.23.11"
rustls-native-certs = "0.7.1"
rustls-pki-types = "1.7.0"
tokio = { version = "1.38.1", features = ["full"] }
tokio-rustls = "0.26.0"
